--- a/pizza.html
+++ b/pizza.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>เมนูพิซซ่า - ร้านอาหารอร่อยเด็ด</title>
+    <title>ร้านอาหารอร่อยเด็ด</title>
     <link rel="stylesheet" href="pizza.css">
 </head>
 <style>
